[package]
name = "sisku-signature-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
lexpr = "0.2.6"
serde = { version = "1.0.138", features = ["derive"] }
serde-lexpr = "0.1.2"
serde_json = "1.0.82"
tree-sitter = "0.20.8"

[build-dependencies]
cc="*"
